--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ img{
     <a class="myButton text-white my-4" href="webcommlist.html" role="button">View Details</a>
   </div>
   <div class="col-md-5">
-    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Image of Webcomm" style="width: auto; height: auto;" src="webcomm.png" data-holder-rendered="true">
+    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Image of Webcomm" style="width: auto; height: auto;" src="webcom.png" data-holder-rendered="true">
   </div>
 </div>
 
