--- a/index.html
+++ b/index.html
@@ -114,22 +114,7 @@ img{
 </head>
 <body class="body bg-light">
 
-<!-- Header navbar -->
-
-  <header>
-    <nav class="navbar navbar-light bg-light sticky-top justify-content-between p-2">
-      <a class="navbar-brand" href="#">
-        <img class="ml-4" src="./ieee-comsoc.svg" width="50%" height="auto" alt="">
-      </a>
-      <form class="form-inline grad">
-        <a class="nav-item nav-link text-dark" href="#Home">Home</a>
-        <a class="nav-item nav-link text-dark" href="#Events">Event</a>
-        <a class="nav-item nav-link text-dark" href="#Support">Escoge</a>
-        <a class="nav-item nav-link text-dark" href="#Support">Webcomm</a>
-      </form>
-    </nav>
-
-<!-- Welcome -->
+	<!-- Welcome -->
 <section id="Home">
   <div class="jumbotron jumbotron-fluid text-center bg-light" style="min-height: 500px;;">
     <div class="container">
@@ -156,7 +141,7 @@ img{
     <a class="myButton text-white my-4" href="webcommlist.html" role="button">View Details</a>
   </div>
   <div class="col-md-5">
-    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Image of Webcomm" style="width: auto; height: auto;" src="webcom.png" data-holder-rendered="true">
+    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Image of Webcomm" style="width: auto; height: auto;" src="Webcomm.png" data-holder-rendered="true">
   </div>
 </div>
 
