--- a/webcommlist.html
+++ b/webcommlist.html
@@ -119,8 +119,8 @@ img{
   <div class="jumbotron jumbotron-fluid text-center bg-light" style="min-height: 500px;;">
     <div class="container">
       <h1>
-        <a href="" class="typewrite text-dark" data-period="2000" data-type='[ "Webcomm -    Webinar Series"]'>
-          <span class="wrap"></span>
+        <a href="" class="typewrite text-dark" data-period="2000" data-type='[ " W E B C O M M "]'>
+          <span class="wrap">Online Event Registration Portal</span>
         </a>
       </h1>
       <p class="lead"></p>
