--- a/webcommlist.html
+++ b/webcommlist.html
@@ -138,7 +138,7 @@ img{
     <div class="col-md-7">
     <h2 class="featurette-heading grad">Space Technology and its Applications</h2>
     <p class="lead mini-grad">IEEE ComSoc Kerala Chapter in collaboration with IEEE ComSoc SBC NIT-C is here with a webinar on "Space Technology and its Applications". The session will be handled by Smt. Subhalakshmi Krishnamoorthy, Deputy director, ISRO, Bangalore.</p>
-    <a class="myButton text-white my-4" href="bit.ly/Webcomm1" role="button">Register Now</a>
+    <a class="myButton text-white my-4" href="form.html" role="button">Registration Closed</a>
   </div>
   <div class="col-md-5">
     <img class="featurette-image img-fluid mx-auto" data-src="holder.js/250x250/auto" alt="Image of Escoge" style="width: auto; height: auto;" src="nitc.jpeg" data-holder-rendered="true">
