--- a/webcommlist.html
+++ b/webcommlist.html
@@ -120,10 +120,10 @@ img{
     <div class="container">
       <h1>
         <a href="" class="typewrite text-dark" data-period="2000" data-type='[ " W E B C O M M "]'>
-          <span class="wrap">Online Event Registration Portal</span>
+          <span class="wrap"></span>
         </a>
       </h1>
-      <p class="lead"></p>
+      <p class="lead">Online Event Registration Portal</p>
     </div>
   </div>
   </header><br>
