--- a/escogelist.html
+++ b/escogelist.html
@@ -142,7 +142,7 @@ img{
     <div class="col-md-7">
       <h2 class="featurette-heading grad">Escoge September Edition</h2>
       <p class="lead mini-grad"></p>
-      <a class="myButton text-white my-4" href="escoge.html" role="button">Registration closed</a>
+      <a class="myButton text-white my-4" href="escoge 6 form.html" role="button">Registration closed</a>
     </div>
     <div class="col-md-5">
       <img class="featurette-image img-fluid mx-auto" data-src="holder.js/250x250/auto" alt="Image of Escoge" style="width: auto; height: auto;" src="e6.jpeg" data-holder-rendered="true">
